k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: gateway
